package com.helb.helbhotel.entities;
import lombok.Getter;
import lombok.Setter;

public class Floor {
    @Getter @Setter
    private String name;

    private  String address;

    private int starRating;
}
