package com.helb.helbhotel.entities;
import lombok.Data;

@Data
public class Hotel {

    private String name;

    private  String address;

    private int starRating;
}
