package com.helb.helbhotel.entities;
import lombok.Data;

@Data
public class Operator {

    private String name;

    private  String employeeId;


}
